--- a/src/Web/wwwroot/email.html
+++ b/src/Web/wwwroot/email.html
@@ -16,6 +16,12 @@
                 <img src='https://www.damanojornal.com/loja/images/dama_bird.png' width='150' />
             </td>
         </tr>
+        <tr><td>
+    Cores<br />
+    <div style="width:20px;height:20px;display:inline;float:left;background-color: rgb(0,191,255)">&nbsp;</div>
+    <div style="width:20px;height:20px;display:inline;float:left;background-color: rgb(255,85,255)">&nbsp;</div>
+
+</td></tr>
     </table>
     <div style="width:550px">
         <img width='100%' src='https://www.damanojornal.com/loja/images/linha-coracao.png' />
