--- a/src/Web/DamaAdmin/wwwroot/index.html
+++ b/src/Web/DamaAdmin/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="DamaAdmin.Client.styles.css" rel="stylesheet" />
+    <link href="DamaAdmin.styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+    <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
