--- a/src/Web/DamaAdmin/Client/wwwroot/index.html
+++ b/src/Web/DamaAdmin/Client/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="DamaAdmin.styles.css" rel="stylesheet" />
+    <link href="DamaAdmin.Client.styles.css" rel="stylesheet" />
 </head>
 
 <body>
